--- a/Main/output/createdTeam.html
+++ b/Main/output/createdTeam.html
@@ -12,33 +12,31 @@
 <body>
 <div class= "header">My Team</div>
 <div class="container">
-<div class="row">
 <div class="card-team"><div class="card">
         <div class="card-header">
         <h2 class="card-title">Austin Rohn</h2>
         <h3 class="card-title">Manager</h3>
         <div class="card-id">ID: 666</div>
-        <a class="card-email" href = "mailtoAustin Rohn"><span style="color:black">Email: </span>AustinRohn19@gmail.com</a>
-        <div class="card-officenumber">Ofiice Number: 666</div>
+        <div class="card-email"><a href = "mailtoAustinrohn19@gmail.com"><span style="color:black">Email: </span>Austinrohn19@gmail.com</a></div>
+        <div class="card-officenumber">Ofiice Number: 555</div>
         </div>
         </div><div class="card">
         <div class="card-header">
         <h2 class="card-title">Austin Rohn</h2>
         <h3 class="card-title">Engineer</h3>
         <div class="card-id">ID: 667</div>
-        <a class="card-email" href = "mailto:Austinrohn19@gmail.com"><span style="color:black">Email: </span>Austinrohn19@gmail.com</a>
-        <a class="card-github" href = "http://github.com/austinrohn19" target="_blank"> austinrohn19</a>
+        <div class="card-email"><a href = "mailto:Austinrohn19@gmail.com"><span style="color:black">Email: </span>Austinrohn19@gmail.com</a></div>
+        <div class="card-github"><a href = "http://github.com/austinrohn19" target="_blank"> <span style="color:black">GitHub: </span>austinrohn19</a></div>
         </div>
         </div><div class="card">
         <div class="card-header">
         <h2 class="card-title">Austin Rohn</h2>
         <h3 class="card-title">Intern</h3>
-        <div class="car-id">ID: 668</div>
-        <a class="card-email" href = "mailto:Austinrohn19@gmail.com"><span style="color:black">Email: </span>Austinrohn19@gmail.com</a>
+        <div class="card-id">ID: 668</div>
+        <div class="card-email"><a href = "mailto:Austinrohn19@gmail.com"><span style="color:black">Email: </span>Austinrohn19@gmail.com</a></div>
         <div class="card-school">School: MSU</div>
         </div>
         </div></div>
-</div>
 </div>
 </body>
 </html>
