--- a/Main/output/createdTeam.html
+++ b/Main/output/createdTeam.html
@@ -16,15 +16,15 @@
         <div class="card-header">
         <h2 class="card-title">Austin Rohn</h2>
         <h3 class="card-title">Manager</h3>
-        <div class="card-id">ID: 666</div>
-        <div class="card-email"><a href = "mailtoAustinrohn19@gmail.com"><span style="color:black">Email: </span>Austinrohn19@gmail.com</a></div>
-        <div class="card-officenumber">Ofiice Number: 555</div>
+        <div class="card-id">ID: 111</div>
+        <div class="card-email"><a href = "mailto:Austinrohn19@gmail.com"><span style="color:black">Email: </span>Austinrohn19@gmail.com</a></div>
+        <div class="card-officenumber">Ofiice Number: 1</div>
         </div>
         </div><div class="card">
         <div class="card-header">
         <h2 class="card-title">Austin Rohn</h2>
         <h3 class="card-title">Engineer</h3>
-        <div class="card-id">ID: 667</div>
+        <div class="card-id">ID: 222</div>
         <div class="card-email"><a href = "mailto:Austinrohn19@gmail.com"><span style="color:black">Email: </span>Austinrohn19@gmail.com</a></div>
         <div class="card-github"><a href = "http://github.com/austinrohn19" target="_blank"> <span style="color:black">GitHub: </span>austinrohn19</a></div>
         </div>
@@ -32,9 +32,9 @@
         <div class="card-header">
         <h2 class="card-title">Austin Rohn</h2>
         <h3 class="card-title">Intern</h3>
-        <div class="card-id">ID: 668</div>
+        <div class="card-id">ID: 333</div>
         <div class="card-email"><a href = "mailto:Austinrohn19@gmail.com"><span style="color:black">Email: </span>Austinrohn19@gmail.com</a></div>
-        <div class="card-school">School: MSU</div>
+        <div class="card-school">School: MSU bootcamp</div>
         </div>
         </div></div>
 </div>
